@@ -4,26 +4,16 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.dyptan</groupId>
     <artifactId>exporter</artifactId>
     <version>1.0</version>
-    <properties>
-        <beam.version>2.55.0</beam.version>
-        <jersey.version>2.36</jersey.version>
-        <jakarta-servlet.version>4.0.3</jakarta-servlet.version>
-        <scala.version>2.13.13</scala.version>
-        <scala.major.version>2.13</scala.major.version>
 
-    </properties>
-
-        <parent>
-            <artifactId>parent</artifactId>
-            <groupId>com.dyptan</groupId>
-            <version>1.0</version>
-        </parent>
+    <parent>
+        <artifactId>parent</artifactId>
+        <groupId>com.dyptan</groupId>
+        <version>1.0</version>
+    </parent>
 
     <dependencies>
-
         <dependency>
             <groupId>org.apache.spark</groupId>
             <artifactId>spark-sql_2.13</artifactId>
@@ -39,21 +29,26 @@
             <artifactId>exporter-api</artifactId>
             <version>1.10</version>
         </dependency>
+        <dependency>
+            <groupId>org.scala-lang</groupId>
+            <artifactId>scala-library</artifactId>
+            <version>${scalaLibraryVersion}</version>
+        </dependency>
     </dependencies>
 
     <build>
         <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.8.1</version>
-                <configuration>
-                    <compilerArgs>
-                        <arg>--add-exports</arg>
-                        <arg>java.management/sun.management=ALL-UNNAMED</arg>
-                    </compilerArgs>
-                </configuration>
-            </plugin>
+<!--            <plugin>-->
+<!--                <groupId>org.apache.maven.plugins</groupId>-->
+<!--                <artifactId>maven-compiler-plugin</artifactId>-->
+<!--                <version>3.8.1</version>-->
+<!--                <configuration>-->
+<!--                    <compilerArgs>-->
+<!--                        <arg>&#45;&#45;add-exports</arg>-->
+<!--                        <arg>java.management/sun.management=ALL-UNNAMED</arg>-->
+<!--                    </compilerArgs>-->
+<!--                </configuration>-->
+<!--            </plugin>-->
             <plugin>
                 <groupId>org.scala-tools</groupId>
                 <artifactId>maven-scala-plugin</artifactId>
@@ -67,44 +62,9 @@
                     </execution>
                 </executions>
                 <configuration>
-                    <scalaVersion>2.13.13</scalaVersion>
+                    <scalaVersion>${scalaLibraryVersion}</scalaVersion>
                 </configuration>
             </plugin>
-            <!--            <plugin>-->
-            <!--                <groupId>org.apache.maven.plugins</groupId>-->
-            <!--                <artifactId>maven-shade-plugin</artifactId>-->
-            <!--                <version>3.5.1</version>-->
-            <!--                <executions>-->
-            <!--                    <execution>-->
-            <!--                        <id>shade-jar-with-dependencies</id>-->
-            <!--                        <phase>package</phase>-->
-            <!--                        <goals>-->
-            <!--                            <goal>shade</goal>-->
-            <!--                        </goals>-->
-            <!--                        <configuration>-->
-            <!--                            <shadedArtifactAttached>true</shadedArtifactAttached>-->
-            <!--                            <shadedClassifierName>with-dependencies</shadedClassifierName>-->
-            <!--                            <artifactSet>-->
-            <!--                                <includes>-->
-            <!--                                    <include>*:*</include>-->
-            <!--                                </includes>-->
-            <!--                            </artifactSet>-->
-            <!--                            <transformers>-->
-            <!--                                <transformer-->
-            <!--                                        implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer"/>-->
-            <!--                                <transformer-->
-            <!--                                        implementation="org.apache.maven.plugins.shade.resource.AppendingTransformer">-->
-            <!--                                    <resource>reference.conf</resource>-->
-            <!--                                </transformer>-->
-            <!--                                <transformer-->
-            <!--                                        implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">-->
-            <!--                                    <mainClass>com.dyptan.Driver</mainClass>-->
-            <!--                                </transformer>-->
-            <!--                            </transformers>-->
-            <!--                        </configuration>-->
-            <!--                    </execution>-->
-            <!--                </executions>-->
-            <!--            </plugin>-->
         </plugins>
     </build>
 </project>
